--- a/Virgo/package.json
+++ b/Virgo/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "braces": "^3.0.2",
     "expo": "^34.0.1",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
