--- a/Virgo/package.json
+++ b/Virgo/package.json
@@ -13,12 +13,15 @@
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native-24h-timepicker": "^1.0.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-modal-datetime-picker": "^7.5.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-swisseph": "0.0.5",
     "react-native-web": "^0.11.4",
-    "react-navigation": "^3.11.1"
+    "react-navigation": "^3.11.1",
+    "react-time-picker": "^3.7.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0"
