--- a/Virgo/package.json
+++ b/Virgo/package.json
@@ -16,6 +16,7 @@
     "react-native-24h-timepicker": "^1.0.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-maps": "^0.25.0",
     "react-native-modal-datetime-picker": "^7.5.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-swisseph": "0.0.5",
